Program textareas autofocus

--- a/dev/canvas.html
+++ b/dev/canvas.html
@@ -1,7 +1,7 @@
 <section id="main">
 	<h1><span id="title">$title</span> <input type="text" id="edit-title" hidden="" value="$title" />  <small><a id="save">Save</a></small></h1>
 	<div id="row" class="row">
-		<textarea id="code" placeholder="//code" spellcheck="false" autocapitalize="off" autocorrect="off" wrap="off">$code</textarea>
+		<textarea id="code" placeholder="//code" spellcheck="false" autocapitalize="off" autocorrect="off" wrap="off" autofocus="">$code</textarea>
 		<iframe id="output" sandbox="allow-scripts"></iframe>
 	</div>
 </section>
