--- a/dev/html.html
+++ b/dev/html.html
@@ -6,7 +6,7 @@
 			<button onclick="run(1)">Restart</button><span class="rit"><input id="autorun" type="checkbox" checked="" /> <label for="autorun">Autorun</label></span>
 		</div>
 		<div id="left" class="half">
-			<textarea id="html" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="HTML" wrap="off">$html</textarea>
+			<textarea id="html" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="HTML" wrap="off" autofocus="">$html</textarea>
 			<textarea id="css" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="CSS" wrap="off">$css</textarea>
 			<textarea id="js" spellcheck="false" autocapitalize="off" autocorrect="off" placeholder="JS" wrap="off">$js</textarea>
 		</div>
