Typos in formatting help

--- a/formatting.html
+++ b/formatting.html
@@ -4,8 +4,8 @@
 <p>Inline formatting (formatting that won't cause a line break) is written as a formatting sequence followed by the affected text followed by the same formatting sequence.</p>
 <section>
 	<h3>Emphasis</h3>
-	<code class="blk">Use an asterisk to *emphasise* text that is slightly more important or is stressed in speech.</code>
-	<blockquote>Use an asterisk to <em>emphasise</em> text that is slightly more important or is stressed in speech.</blockquote>
+	<code class="blk">Use an asterisk to *emphasize* text that is slightly more important or is stressed in speech.</code>
+	<blockquote>Use an asterisk to <em>emphasize</em> text that is slightly more important or is stressed in speech.</blockquote>
 </section>
 <section>
 	<h3>Strong Emphasis</h3>
@@ -50,10 +50,10 @@
 </section>
 <section>
 	<h3>Super/sub-script</h3>
-	<p>For convienece, a superscripted string consisting of just word characters (alphanumeric or underscore (<code>_</code>)) can be written with just a carrot.</p>
+	<p>For convenience, a superscripted string consisting of just word characters (alphanumeric or underscore (<code>_</code>)) can be written with just a carrot.</p>
 	<code class="blk">5^2 = 25</code>
 	<blockquote>5<sup>2</sup> = 25</blockquote>
-	<p>Otherwise parenthatheses are needed.</p>
+	<p>Otherwise parenthesis are needed.</p>
 	<code class="blk">3^(3^(3)) = 7625597484987</code>
 	<blockquote>3<sup>3<sup>3</sup></sup> = 7625597484987</blockquote>
 	<p>A dollar sign (<code>$</code>) is used for subscript.</p>
@@ -112,7 +112,7 @@ C) Item 3
 </section>
 <section>
 	<h3>Block code <small>(not parsed)</small></h3>
-	<p>Lines indeneted by 4 spaces or a tab character (or more depending on nesting in lists) are not parsed and are put in a code block.</p>
+	<p>Lines indented by 4 spaces or a tab character (or more depending on nesting in lists) are not parsed and are put in a code block.</p>
 	<code class="blk">    function multiply3(a, b, c) {
         return a * b * c;
     }</code>
