Fixed typo in formatting help

--- a/formatting.html
+++ b/formatting.html
@@ -19,7 +19,7 @@
 </section>
 <section>
 	<h3>Inserted Text</h3>
-	<code class="blk">Use 3 plusses to indicate ---inserted text--- which was added later to the post, especially if it replaced deleted text.</code>
+	<code class="blk">Use 3 plusses to indicate +++inserted text+++ which was added later to the post, especially if it replaced deleted text.</code>
 	<blockquote>Use 3 plusses to indicate <ins>inserted text</ins> which was added later to the post, especially if it replaced deleted text.</blockquote>
 </section>
 <section>
