Questions can be posted

--- a/qa/ask.html
+++ b/qa/ask.html
@@ -41,7 +41,7 @@
 	<fieldset id="step2" class="hidden">
 		<h2>Question Body</h2>
 		<textarea name="description" id="description" placeholder="Description"></textarea>
-		<h2><input type="text" name="question" id="question" placeholder="Core Question" class="fullwidth" maxlength="144" /></h2>
+		<h2><input type="text" name="question" id="question" placeholder="Core Question" class="fullwidth" required="" maxlength="144" /></h2>
 		<button type="submit" id="submit3">Next</button>
 		<div id="err3" class="err"></div>
 	</fieldset>
