--- a/chat/room.html
+++ b/chat/room.html
@@ -84,24 +84,6 @@ $textarea
 	cont.onscroll = function(e) {
 		onBottom = cont.scrollTop + cont.offsetHeight >= cont.scrollHeight - 2;
 	};
-	setInterval(function() {
-		if (!lock &amp;&amp; innerWidth >= 700 &amp;&amp; cont.children.length >= 92 &amp;&amp; skipped &amp;&amp; cont.scrollTop &lt; 180) {
-			skipped = Math.max(0, skipped - 1);
-			socket.send(JSON.stringify({event: 'req', skip: skipped}));
-		}
-	}, 20);
-	setInterval(function() {
-		if (!lock &amp;&amp; innerWidth >= 700 &amp;&amp; cont.children.length >= 92 &amp;&amp; skipped &amp;&amp; cont.scrollTop &lt; 720) {
-			skipped = Math.max(0, skipped - 1);
-			socket.send(JSON.stringify({event: 'req', skip: skipped}));
-		}
-	}, 200);
-	setInterval(function() {
-		if (!lock &amp;&amp; innerWidth >= 700 &amp;&amp; cont.children.length >= 92 &amp;&amp; skipped &amp;&amp; cont.scrollTop &lt; cont.scrollHeight / 2) {
-			skipped = Math.max(0, skipped - 1);
-			socket.send(JSON.stringify({event: 'req', skip: skipped}));
-		}
-	}, 400);
 	addEventListener('resize', function() {
 		if (onBottom) cont.scrollTop = cont.scrollHeight;
 	});
@@ -311,8 +293,27 @@ $textarea
 		} else if (data.event == 'info-skipped') {
 			skipped = data.body;
 			if (data.ts) {
-				ta.hidden = document.getElementById('btn').hidden = true;
+				ta.hidden = document.getElementById('subta').hidden = true;
 				document.getElementById('ts').hidden = false;
+			} else {
+				setInterval(function() {
+					if (innerWidth >= 700 &amp;&amp; cont.children.length >= 92 &amp;&amp; skipped &amp;&amp; cont.scrollTop &lt; 180) {
+						skipped = Math.max(0, skipped - 1);
+						socket.send(JSON.stringify({event: 'req', skip: skipped}));
+					}
+				}, 20);
+				setInterval(function() {
+					if (innerWidth >= 700 &amp;&amp; cont.children.length >= 92 &amp;&amp; skipped &amp;&amp; cont.scrollTop &lt; 720) {
+						skipped = Math.max(0, skipped - 1);
+						socket.send(JSON.stringify({event: 'req', skip: skipped}));
+					}
+				}, 200);
+				setInterval(function() {
+					if (innerWidth >= 700 &amp;&amp; cont.children.length >= 92 &amp;&amp; skipped &amp;&amp; cont.scrollTop &lt; cont.scrollHeight / 2) {
+						skipped = Math.max(0, skipped - 1);
+						socket.send(JSON.stringify({event: 'req', skip: skipped}));
+					}
+				}, 400);
 			}
 		} else if (data.event == 'info-complete') {
 			lock = false;
