Inactive chat users slowly fade

--- a/chat/room.html
+++ b/chat/room.html
@@ -466,8 +466,8 @@ $textarea
 	}
 	.starcount[data-count="0"] { display: none }
 	.inactive {
-		color: red;
-		font-style: italic;
+		transition: opacity 60s;
+		opacity: 0.3;
 	}
 	.writing {
 		color: green;
