--- a/dev/canvas.html
+++ b/dev/canvas.html
@@ -226,7 +226,8 @@
 			} else if (res == 'Success') {
 				edit.hidden = true;
 				var title = document.getElementById('title');
-				title.textContent = edit.value.substr(0, 92);
+				title.textContent = edit.value.substr(0, 92) || 'Untitled';
+				if (!edit.value) edit.value = 'Untitled';
 				title.hidden = false;
 			} else alert('Unknown error. Response was: ' + res);
 		}, 'title=' + encodeURIComponent(this.value));
