--- a/chat/room.html
+++ b/chat/room.html
@@ -190,25 +190,70 @@ $textarea
 		} else if (data.event == 'delete') {
 			var msg = document.getElementById(data.id);
 			if (!msg) return;
-			if (msg.getElementsByClassName('c-sig')[0].getElementsByTagName('a')[0].textContent == username) msg.classList.add('deleted');
-			else msg.hidden = true;
-			var msgCtrls = msg.getElementsByClassName('ctrls')[0];
-			if (!msgCtrls) return;
-			msgCtrls = msgCtrls.children;
-			msgCtrls[0].hidden = true;
-			if (msgCtrls[3]) msgCtrls[3].hidden = true;
-			if (msgCtrls[3]) msgCtrls[4].hidden = false;
+			if (msg.getElementsByClassName('c-sig')[0].getElementsByTagName('a')[0].textContent == username) {
+				msg.classList.add('deleted');
+				var msgCtrls = msg.getElementsByClassName('ctrls')[0];
+				if (!msgCtrls) return;
+				msgCtrls = msgCtrls.children;
+				msgCtrls[0].hidden = true;
+				if (msgCtrls[3]) msgCtrls[3].hidden = true;
+				if (msgCtrls[3]) msgCtrls[4].hidden = false;
+			} else msg.parentNode.removeChild(msg);
 		} else if (data.event == 'undelete') {
 			var msg = document.getElementById(data.id);
-			if (!msg) return;
-			if (msg.getElementsByClassName('c-sig')[0].getElementsByTagName('a')[0].textContent == username) msg.classList.remove('deleted');
-			else msg.hidden = false;
-			var msgCtrls = msg.getElementsByClassName('ctrls')[0].children;
-			if (!msgCtrls) return;
-			msgCtrls = msgCtrls.children;
-			msgCtrls[0].hidden = false;
-			if (msgCtrls[3]) msgCtrls[3].hidden = false;
-			if (msgCtrls[3]) msgCtrls[4].hidden = true;
+			if (msg) {
+				msg.classList.remove('deleted');
+				var msgCtrls = msg.getElementsByClassName('ctrls')[0];
+				if (!msgCtrls) return;
+				msgCtrls = msgCtrls.children;
+				msgCtrls[0].hidden = false;
+				if (msgCtrls[3]) msgCtrls[3].hidden = false;
+				if (msgCtrls[3]) msgCtrls[4].hidden = true;
+			} else if (data.id > cont.firstChild.id) {
+				source[data.id] = data.body;
+				if (users.indexOf(data.user) != -1) users.splice(users.indexOf(data.user), 1);
+				if (data.name != username) users.push(data.user);
+				var div = document.createElement('div');
+				div.classList.add('comment');
+				if (data.deleted) div.classList.add('deleted');
+				div.innerHTML = (username ? markdown(data.body).replace(new RegExp('@' + username + '(\\W)', 'g'), '&lt;span class="mention">@' + username + '&lt;/span>$1') : markdown(data.body)).replaceAll('&lt;a', '&lt;a target="_blank"');
+				var sig = document.createElement('span');
+				sig.classList.add('c-sig');
+				var starcount = document.createElement('span');
+				starcount.classList.add('starcount');
+				starcount.appendChild(document.createTextNode((starcount.dataset.count = data.stars || 0) + '★'));
+				sig.appendChild(starcount);
+				sig.appendChild(document.createTextNode(' -'));
+				var user = document.createElement('a');
+				user.href = '/user/' + data.user;
+				user.appendChild(document.createTextNode(data.user));
+				sig.appendChild(user);
+				sig.appendChild(document.createTextNode(', '));
+				var permalink = document.createElement('a');
+				if (!data.time) data.time = new Date().getTime();
+				permalink.appendChild(agot(data.time));
+				permalink.href = '#' + (div.id = data.id);
+				sig.appendChild(permalink);
+				div.appendChild(sig);
+				var tCtrls = ctrls.cloneNode(true);
+				tCtrls.children[0].onclick = ctrlsStar.onclick;
+				tCtrls.children[1].onclick = ctrlsLink.onclick;
+				tCtrls.children[2].onclick = ctrlsEdit.onclick;
+				tCtrls.children[3].onclick = ctrlsDelete.onclick;
+				tCtrls.children[4].onclick = ctrlsUndelete.onclick;
+				tCtrls.children[5].onclick = ctrlsFlag.onclick;
+				if (username != data.user) {
+					tCtrls.removeChild(tCtrls.children[2]);
+					tCtrls.removeChild(tCtrls.children[2]);
+					tCtrls.removeChild(tCtrls.children[2]);
+				} else tCtrls.children[data.deleted ? 3 : 4].hidden = true;
+				if (data.deleted) tCtrls.children[0].hidden = true;
+				if (username) div.appendChild(tCtrls);
+				cont.insertBefore(div, cont.firstChild);
+				cont.scrollTop += div.offsetHeight + 3;
+				if (onBottom &amp;&amp; !location.hash) cont.scrollTop = cont.scrollHeight;
+				if (data.event == 'add' &amp;&amp; document.hidden) document.title = '(' + ++unread + ') ' + title;
+			}
 		} else if (data.event == 'selfstar') {
 			if (e = document.getElementById(data.id)) e.getElementsByClassName('ctrls')[0].firstChild.classList.add('clkd');
 		} else if (data.event == 'star') {
@@ -325,6 +370,7 @@ $textarea
 				location.hash = '';
 				location.hash = '#' + hash;
 			};
+			if (!document.getElementById('ts').hidden) socket.onmessage = null;
 		} else if (data.event == 'info-update') {
 			document.title = (document.getElementById('name').textContent = document.getElementById('nameedit').value = data.name) + ' | Chat | DevDoodle';
 			document.getElementById('desc').textContent = document.getElementById('descedit').value = data.desc;
