Fix #44 & user page layout

--- a/chat/room.html
+++ b/chat/room.html
@@ -153,6 +153,7 @@ $textarea
 			sig.appendChild(user);
 			sig.appendChild(document.createTextNode(', '));
 			var permalink = document.createElement('a');
+			permalink.title = 'Permalink';
 			if (!data.time) data.time = new Date().getTime();
 			permalink.appendChild(agot(data.time));
 			permalink.href = '#' + (div.id = data.id);
@@ -231,6 +232,7 @@ $textarea
 				sig.appendChild(user);
 				sig.appendChild(document.createTextNode(', '));
 				var permalink = document.createElement('a');
+				permalink.title = 'Permalink';
 				if (!data.time) data.time = new Date().getTime();
 				permalink.appendChild(agot(data.time));
 				permalink.href = '#' + (div.id = data.id);
@@ -292,6 +294,7 @@ $textarea
 				sig.appendChild(user);
 				sig.appendChild(document.createTextNode(', '));
 				var permalink = document.createElement('a');
+				permalink.title = 'Permalink';
 				if (!data.time) data.time = new Date().getTime();
 				permalink.appendChild(agot(data.time));
 				permalink.href = '#' + data.id;
