/qa/docs/ -> /qa/tips/

--- a/a/head.html
+++ b/a/head.html
@@ -36,7 +36,7 @@
 				<a href="/qa/">Q&amp;A</a>
 				<nav>
 					<a href="/qa/ask">Ask</a>
-					<a href="/qa/docs/">Tips</a>
+					<a href="/qa/tips/">Tips</a>
 					<a href="/qa/search/">Search</a>
 				</nav>
 				<a href="/chat/">Chat</a>
