--- a/dev/html.html
+++ b/dev/html.html
@@ -159,6 +159,45 @@
 	}
 	.comment:not(:hover) .sctrls { opacity: .4 }
 	#content > .sctrls { display: none }
+	.score {
+		float: left;
+		display: block;
+		margin-right: 4px;
+		color: #f00;
+		padding: 0 4px;
+	}
+	.score[data-score="0"] { display: none }
+	.score[data-score="1"] { color: #888 }
+	.score[data-score="2"] { color: #666 }
+	.score[data-score="3"] { color: #444 }
+	.score[data-score="4"] { color: #222 }
+	.score[data-score="5"] { color: #000 }
+	.score[data-score="6"] { color: #001 }
+	.score[data-score="7"] { color: #002 }
+	.score[data-score="8"] { color: #003 }
+	.score[data-score="9"] { color: #004 }
+	.score[data-score="10"] { color: #005 }
+	.score[data-score="11"] { color: #006 }
+	.score[data-score="12"] { color: #007 }
+	.score[data-score="13"] { color: #008 }
+	.score[data-score="14"] { color: #009 }
+	.score[data-score="15"] { color: #00a }
+	.score[data-score="16"] { color: #00b }
+	.score[data-score="17"] { color: #00c }
+	.score[data-score="18"] { color: #00d }
+	.score[data-score="19"] { color: #00e }
+	.score[data-score="20"] { color: #00f }
+	.score[data-score="21"] { color: #33f }
+	.score[data-score="22"] { color: #66f }
+	.score[data-score="23"] { color: #f90 }
+	.score[data-score="24"] { color: #f80 }
+	.score[data-score="25"] { color: #f70 }
+	.score[data-score="26"] { color: #f60 }
+	.score[data-score="27"] { color: #f50 }
+	.score[data-score="28"] { color: #f40 }
+	.score[data-score="29"] { color: #f30 }
+	.score[data-score="30"] { color: #f20 }
+	.score[data-score="31"] { color: #f10 }
 </style>
 <script>
 	var footerOff = true,
@@ -334,7 +373,14 @@
 			var div = document.createElement('div');
 			div.classList.add('comment');
 			div.innerHTML = markdown(data.body);
-			if ($rep >= 50) div.insertBefore(document.getElementById('content').children[2].cloneNode(true), div.firstChild);
+			if ($rep >= 50) {
+				div.insertBefore(document.getElementById('content').children[2].cloneNode(true), div.firstChild);
+				div.firstChild.firstChild.onclick = upvoteComment;
+				var score = document.createElement('span');
+				score.classList.add('score');
+				score.appendChild(document.createTextNode(score.dataset.score = 0));
+				div.insertBefore(score, div.firstChild);
+			}
 			var sig = document.createElement('span');
 			sig.classList.add('c-sig');
 			sig.appendChild(document.createTextNode('-'));
@@ -350,6 +396,9 @@
 			sig.appendChild(permalink);
 			div.appendChild(sig);
 			document.getElementById('comments').appendChild(div);
+		} else if (data.event == 'scorechange') {
+			var c = document.getElementById('c' + data.id);
+			if (c) c.getElementsByClassName('score')[0].dataset.score = c.getElementsByClassName('score')[0].textContent = data.score;
 		} else if (data.event == 'err') alert('Error: ' + data.body);
 	};
 	var deletebutton = document.getElementById('delete');
@@ -363,5 +412,16 @@
 				});
 			}
 		};
+	}
+	function upvoteComment() {
+		this.classList.toggle('clkd');
+		socket.send(JSON.stringify({
+			event: this.classList.contains('clkd') ? 'vote' : 'unvote',
+			id: parseInt(this.parentNode.parentNode.id.substr(1))
+		}));
+	}
+	var comments = document.getElementsByClassName('comment');
+	for (var i = 0; i &lt; comments.length; i++) {
+		comments[i].getElementsByClassName('sctrls')[0].firstChild.onclick = upvoteComment;
 	}
 </script>
