--- a/learn/web/basic-tags/4.html
+++ b/learn/web/basic-tags/4.html
@@ -3,10 +3,10 @@ Basic Tags
 	<div id="text">
 		<div id="text-inner">
 			<h1>Basic Tags</h1>
-			<h2>Comments</h2>
-			<p>As you saw in the last lesson, a comment is used to comment (no joke!) in the code. Why would we need to comment on the code? Altho comments don't affect the browser and what the end user will see, it helps you, the developer, stay organized. Unlike most HTML tags, comments start with <code>&lt;!--</code> and end with <code>--></code>. You can put anything in a comment.</p>
-			<code class="blk">&lt;!-- This is what a comment looks like. It doesn't functionally do anything. --></code>
-			<p>To move on, write a comment containing anything you want!</p>
+			<h2>Quiz</h2>
+			<p>It's time for a quiz! Let's test your knowledge on basic tags.</p>
+			<h2>How to answer</h2>
+			<p>Next to "answer", put <i>just the letter</i> of the answer you want to pick. Answer each one and then press "submit." Only once you have answered <i>all</i> the questions correctly will you be able to move on.</i></p>
 			<button id="check" class="blk" onclick="javascript:submit()">Submit</button>
 			<div id="passed" class="passed clearfix">
 				<h2>You did it! <small class="rit" style="font-size: 14px; top: 6px;"><a href="../4/">Move on →</a></small></h2>
@@ -18,11 +18,6 @@ Basic Tags
 		</div>
 		<div id="cntrls"><a href="../2/" class="lft">Back</a><a href="../4/" class="rit">Next</a></div>
 	</div>
-	<textarea id="html">&lt;!DOCTYPE html>
-&lt;html>
-	&lt;head>&lt;/head>
-	&lt;body>&lt;/body>
-&lt;/html></textarea>
 	<iframe id="output"></iframe>
 </div>
 <script>
