Added textarea questions

--- a/learn/web/basic-tags/4.html
+++ b/learn/web/basic-tags/4.html
@@ -18,7 +18,33 @@ Basic Tags
 		</div>
 		<div id="cntrls"><a href="../2/" class="lft">Back</a><a href="../4/" class="rit">Next</a></div>
 	</div>
-	<iframe id="output"></iframe>
+	<iframe id="output">
+	<textarea id="html">&lt;!--
+	
+	1: What are the tags for a paragraph?
+		a) &lt;p>&lt;/p>
+		b) &lt;paragraph>&lt;/paragraph>
+		c) &lt;p1>&lt;/p1>
+		d) all of the above
+		Answer:	
+			
+	2: What are the tags for a header?
+		a) &lt;h1>&lt;/h1>
+		b) &lt;h3>&lt;/h3>
+		c) &lt;h5>&lt;/h5>
+		d) all of the above
+		Answer:
+		
+	3: What is the formatting of a comment?
+		a) &lt;c>comment goes here&lt;/c>
+		b) &lt;comment>comment goes here&lt;/comment>
+		c) &lt;!--comment goes here-->
+		d) &lt;--comment goes here-->
+		Answer:
+		
+	-->
+	</textarea>
+	</iframe>
 </div>
 <script>
 	var footerOff = true, noPageOverflow = 520;
