--- a/learn/web/basic-tags/3.html
+++ b/learn/web/basic-tags/3.html
@@ -4,7 +4,7 @@ Basic Tags
 		<div id="text-inner">
 			<h1>Basic Tags</h1>
 			<h2>Comments</h2>
-			<p>As you saw in the last lesson, a comment is used to comment (no joke!) in the code. Why would we need to comment on the code? Altho comments don't affect the browser and what the end user will see, it helps you, the developer, stay organized. Unlike most HTML tags, comments start with <code>&lt;!--</code> and end with <code>--></code>. You can put anything in a comment.</p>
+			<p>As you saw in the last lesson, a comment is used to comment (no joke!) in the code. Why would we need to comment on the code? Although comments don't affect the browser and what the end user will see, it helps you, the developer, stay organized. Unlike most HTML tags, comments start with <code>&lt;!--</code> and end with <code>--></code>. You can put anything in a comment.</p>
 			<code class="blk">&lt;!-- This is what a comment looks like. It doesn't functionally do anything. --></code>
 			<p>To move on, write a comment containing anything you want!</p>
 			<button id="check" class="blk" onclick="javascript:submit()">Submit</button>
